--- a/css/index.css
+++ b/css/index.css
@@ -1,7 +1,9 @@
+/* 总容器 */
 .wrapper{
     width: 100%;
     height: 100%;
 }
+/* header */
 .wrapper header{
     width: 100%;
     height: 12vw;
@@ -21,4 +23,302 @@
 }
 .wrapper header .location-text .fa-caret-down{
     margin-left: 1vw;
+}
+/* search */
+.wrapper .search{
+    width: 100%;
+    height: 13vw;
+}
+.wrapper .search .search-fixed-top{
+    width: 100%;
+    height: 13vw;
+    background-color: #0097FF;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.wrapper .search .search-fixed-top .search-box{
+    width: 90%;
+    height: 9vw;
+    background-color: #fff;
+    border-radius: 2px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: #AEAEAE;
+    font-family: "宋体";
+    user-select: none;
+}
+.wrapper .search .search-fixed-top .search-box .fa-search{
+    margin-right: 1vw;
+}
+/* foodtype */
+.foodtype{
+    width: 100%;
+    height: 48vw;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    align-items: center;
+}
+.foodtype li{
+    width: 18vw;
+    height: 20vw;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    user-select: none;
+    cursor: pointer;
+}
+.foodtype li img{
+    width: 12vw;
+    height: 10.3vw;
+}
+.foodtype li p{
+    font-size: 3.2vw;
+    color: #666;
+}
+/* banner */
+.banner{
+    width: 95%;
+    height: 29vw;
+    margin: 0 auto;
+    background-image: url();
+    background-repeat: no-repeat;
+    background-size: cover;
+    box-sizing: border-box;
+    padding: 2vw 6vw;
+}
+.banner h3{
+    font-size: 4.2vw;
+    margin-bottom: 1.2vw;
+}
+.banner p{
+    font-size: 3.4vw;
+    color: #666;
+    font-weight: 700;
+}
+.banner a{
+    font-size: 3vw;
+    color: #C79060;
+    font-weight: 700;
+}
+/* supermember */
+.supermember{
+    width: 95%;
+    height: 11.5vw;
+    margin: 0 auto;
+    background-color: #FEEDC1;
+    margin-top: 1.3vw;
+    border-radius: 2px;
+    color: #644F1B;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+.supermember .left{
+    display: flex;
+    align-items: center;
+    margin-left: 4vw;
+    user-select: none;
+}
+.supermember .left img{
+    width: 6vw;
+    height: 6vw;
+    margin-right: 2vw;
+}
+.supermember .left h3{
+    font-size: 4vw;
+    margin-right: 2vw;
+}
+.supermember .left p{
+    font-size: 3vw;
+}
+.supermember .right{
+    font-size: 3vw;
+    margin-right: 4vw;
+    cursor: pointer;
+}
+/* recommend */
+.recommend{
+    width: 100%;
+    height: 14vw;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.recommend .recommend-line{
+    width: 6vw;
+    height: 0.2vw;
+    background-color: #888;
+}
+.recommend p{
+    font-size: 4vw;
+    margin: 0 4vw;
+}
+/* recommendtype */
+.recommendtype{
+    width: 100%;
+    height: 5vw;
+    margin-bottom: 5vw;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+}
+.recommendtype li{
+    font-size: 3.5vw;
+    color: #555;
+}
+/* business */
+.business{
+    width: 100%;
+    padding-bottom: 14vw;
+}
+.business li{
+    width: 100%;
+    box-sizing: border-box;
+    padding: 2.5vw;
+    user-select: none;
+    border-bottom: solid 1px #DDD;
+    display: flex;
+}
+.business li img{
+    width: 18vw;
+    height: 18vw;
+}
+.business li .business-info{
+    width: 100%;
+    box-sizing: border-box;
+    padding-left: 3vw;
+}
+.business li .business-info .business-info-h{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-bottom: 2vw;
+}
+.business li .business-info .business-info-h h3{
+    font-size: 4vw;
+    color: #333;
+}
+.business li .business-info .business-info-h .business-info-like{
+    width: 1.6vw;
+    height: 3.4vw;
+    background-color: #666;
+    color: #fff;
+    font-size: 4vw;
+    margin-right: 4vw;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.business li .business-info .business-info-star{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-bottom: 2vw;
+    font-size: 3.1vw;
+}
+.business li .business-info .business-info-star .business-info-star-left{
+    display: flex;
+    align-items: center;
+}
+.business li .business-info .business-info-star .business-info-star-left .fa-star{
+    color: #FEC80E;
+    margin-right: 0.5vw;
+}
+.business li .business-info .business-info-star .business-info-star-left p{
+    color: #666;
+    margin-left: 1vw;
+}
+.business li .business-info .business-info-star .business-info-star-right{
+    background-color: #0097FF;
+    color: #fff;
+    font-size: 2.4vw;
+    border-radius: 2px;
+    padding: 0 0.6vw;
+}
+.business li .business-info .business-info-delivery{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-bottom: 2vw;
+    color: #666;
+    font-size: 3.1vw;
+}
+.business li .business-info .business-info-explain{
+    display: flex;
+    align-items: center;
+    margin-bottom: 3vw;
+}
+.business li .business-info .business-info-explain div{
+    border: solid 1px #DDD;
+    font-size: 2.8vw;
+    color: #666;
+    border-radius: 3px;
+    padding: 0 0.1vw ;
+}
+.business li .business-info .business-info-promotion{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-bottom: 1.8vw;
+}
+.business li .business-info .business-info-promotion .business-info-promotion-left{
+    display: flex;
+    align-items: center;
+}
+.business li .business-info .business-info-promotion .business-info-promotion-left .business-info-promotion-left-incon{
+    width: 4vw;
+    height: 4vw;
+    background-color: #70BC46;
+    border-radius: 3px;
+    font-size: 3vw;
+    color: #fff;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.business li .business-info .business-info-promotion .business-info-promotion-left p{
+    color: #666;
+    font-size: 3vw;
+    margin-left: 2vw;
+}
+.business li .business-info .business-info-promotion .business-info-promotion-right{
+    display: flex;
+    align-items: center;
+    font-size: 2.5vw;
+    color: #999;
+}
+.business li .business-info .business-info-promotion .business-info-promotion-right p{
+    margin-right: 2vw;
+}
+/* footer */
+.footer{
+    width: 100%;
+    height: 14vw;
+    border-top: solid 1px #DDD;
+    background-color: #fff;
+    position: fixed;
+    left: 0;
+    bottom: 0;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+}
+.footer li{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    color: #999;
+    user-select: none;
+    cursor: pointer;
+}
+.footer li p{
+    font-size: 2.8vw;
+}
+.footer li i{
+    font-size: 5vw;
 }
