--- a/css/iconfont.css
+++ b/css/iconfont.css
@@ -1,6 +1,6 @@
 @font-face {
   font-family: "iconfont"; /* Project id  */
-  src: url('iconfont.ttf?t=1665384732873') format('truetype');
+  src: url('iconfont.ttf?t=1665412092252') format('truetype');
 }
 
 .iconfont {
@@ -29,6 +29,10 @@
 
 .icon-sanjiaoxing:before {
   content: "\e6bd";
+}
+
+.icon-sousuo:before {
+  content: "\e8b9";
 }
 
 .icon-faxian:before {
